- CVE-2020-8169 resolved in all Alpine based images
- CVE-2020-24977 resolved in all Alpine based images
- Restingclam updated to log requesting IP address to identify to which server the virus was uploaded to
- Added script to add/renew letsencrypt certs via fleeting certbot container

v1.2.0
======
- NGINX log format brought in line with IICSA
- Modsec OWASP ruleset updated from 3.0.2 to 3.3.0
- Modsec OWASP rule exclusions enabled for Wordpress, Drupal etc.
- CVE-2020-8927 resolved in wordpress
- CVE-2020-8927 resolved in drupal7
- CVE-2020-24977 resolved in drupal8
- CVE-2020-8177 resolved in drupal8
- CVE-2020-8169 resolved in drupal8
- CVE-2020-8927 resolved in drupal8

v1.2.1
======
- Readded include directive for /etc/mysql/conf.d for mariadb image
- Added include directive for /etc/mysql/encircle.d for overrides
- Added error-logging.ini file to drupal images to replicate wordpress settings
- Removed settings from my.cnf to be overriden in mariadb image
- Drupal8 updated from 8.9.2 to 8.9.6 resolving multiple vulnerabilities (CVE-2020-136(66/67/68/69/70))
- Added drupal.conf hardening to NGINX modsec image
- Added git, bash, nano to drupal images

v1.2.2
======
- Rebuild only, no code changes
- Fixed CVE-2020-15999 in nginx-modsec, wordpress, drupal7, drupal8, nginx-proxy

v1.2.3
======
- Upgraded Wordpress from 5.5.1 to 5.5.3

v1.2.4
======
- Upgraded Drupal7 to 7.74

v1.2.5
======
- Upgraded Drupal7 to 7.75
- Upgraded Drupal8 to 8.9.10

v1.2.6
======
- Added official nginx-proxy image
- Added ENDPOINT variable to nginx-modsec entrypoiny envsubst for nginx-proxy endpoint

v1.2.7
======
- Rebuild only, no code changes

v1.2.8 (latest)
======
- Wordpress/Drupal postfix.ini modified to send sender address as noreply@${SITE}
- Change BREAKS email for previous versions, you MUST now add the SITE environment variable to wordpress/drupal containers
- Wordpress updated to 5.6.0
- Critical vulnerability CVE-2020-29599 resolved in wordpress